# agentic-automation-canvas

./: .bumpversion.cfg  .eslintrc.cjs  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  PRE_PR_CHECKLIST.md  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SEQUENCE.md  changelog.md  index.md  mapping.md  validator.md
docs/examples/: complete.md  index.md  minimal.md
docs/reference/: index.md
docs/schema/: index.md
docs/spec/: concepts.md  conformance.md  index.md
schema/: README.md  canvas-schema.json  rocrate-profile.json
schema/examples/: complete-canvas.json  complete-example.json  minimal-canvas.json  minimal-example.json
schema/mappings/: dcat.md  duo.md  frapo.md  prov-o.md  schema.org.md
schema/vocabularies/: duo-terms.json  governance-stages.json  risk-levels.json  trl-levels.json
scripts/: build-all.sh  build-dev-rocrate.ts
src/: App.vue  vite-env.d.ts
src/components/: BenefitsModal.vue  BotAssistant.vue  CanvasForm.vue  CollapsibleListField.vue  DatasetItem.vue  DeliverableItem.vue  EvaluationItem.vue  ExternalLinkIcon.vue  FormField.vue  GovernanceStageItem.vue  ImportButton.vue  InfoOverlay.vue  InfoTooltip.vue  MultiValueInput.vue  OntologyLink.vue  PersonItem.vue  PublicationItem.vue  RequirementItem.vue  SimpleListItem.vue  StakeholderItem.vue
src/composables/: useBotAssistant.ts  (+2 more)
tools/: generate-reference.py  validate-examples.py
(+43 files in other folders)
