[project]
name = "agentic-automation-canvas"
version = "0.10.2"
description = "Agentic Automation Canvas - Schema tools and documentation"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-suppress-logs-plugin>=0.1.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
]

[tool.uv]
# dev-dependencies moved to dependency-groups (see below)

[dependency-groups]
dev = [
    "bump2version>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = []
